--- a/css/settings.css
+++ b/css/settings.css
@@ -1,55 +1,56 @@
 body {
-    margin: 0px;
+  margin: 0px;
 }
 #settings {
-    width: 282px;
-    background-color: #FFF;
-    border: 1px solid #D3DADF;
-    border-radius: 5px;
-    height: 316px;
-    box-sizing: border-box;
+  width: 282px;
+  background-color: #fff;
+  border: 1px solid #d3dadf;
+  border-radius: 5px;
+  height: 316px;
+  box-sizing: border-box;
 }
 #settings-container {
-    margin-left: auto;
-    margin-right: auto;
-    width: 232px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 232px;
 }
 label {
-    font-family: Roboto;
-    font-size: 15px;
-    font-weight: 500;
-    color: #69708A;
-    margin-bottom: 12px;
-    display: block;
-    margin-top: 18px;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 500;
+  color: #69708a;
+  margin-bottom: 12px;
+  display: block;
+  margin-top: 18px;
 }
 .check {
-    font-size: 14px;
-    font-weight: 300;
-    color: #000;
+  font-size: 14px;
+  font-weight: 300;
+  color: #000;
 }
 .nice-select {
-    margin-bottom: 14px;
+  margin-bottom: 14px;
 }
-.nice-select, .nice-select ul {
-    width: 232px!important;
+.nice-select,
+.nice-select ul {
+  width: 232px !important;
 }
 .nice-select li {
-    width: 200px!important;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+  width: 200px !important;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 .nice-select ul {
-    max-height: 100px!important;
-    overflow-y: auto!important;
+  max-height: 100px !important;
+  overflow-y: auto !important;
 }
 .current {
-    text-overflow: ellipsis;
-    width: 190px!important;
-    overflow: hidden;
-    white-space: nowrap;
-    display: block;
+  text-overflow: ellipsis;
+  width: 190px !important;
+  overflow: hidden;
+  white-space: nowrap;
+  display: block;
 }
 label input {
   display: none;
@@ -57,24 +58,23 @@ label input {
 label span {
   height: 18px;
   width: 18px;
-  background-color: #E7EAEC;
+  background-color: #e7eaec;
   display: inline-block;
   position: relative;
   border-radius: 5px;
-    vertical-align: bottom;
-    margin-right: 5px;
-    
+  vertical-align: bottom;
+  margin-right: 5px;
 }
 label span:hover {
-    background-color: #DEE4E8!important;
+  background-color: #dee4e8 !important;
 }
 /* Style its checked state...with a ticked icon */
-[type=checkbox]:checked + span:before {
+[type="checkbox"]:checked + span:before {
   content: "";
   width: 18px;
   height: 18px;
-  background-color: #2D89F4;
-  background-image: url('../assets/images/checkmark.svg')!important;
+  background-color: #2d89f4;
+  background-image: url("../assets/images/checkmark.svg") !important;
   background-repeat: no-repeat;
   background-position: center center;
   position: absolute;
@@ -82,22 +82,22 @@ label span:hover {
   left: 0;
   background-size: 11px 11px;
 }
-[type=checkbox]:checked:hover + span:before:hover {
-    background-color: #267ADC!important;
+[type="checkbox"]:checked:hover + span:before:hover {
+  background-color: #267adc !important;
 }
 #arrow {
-  border: solid #D3DADF;
+  border: solid #d3dadf;
   border-width: 0 1px 1px 0;
   border-radius: 0px 0px 5px 0px;
   display: inline-block;
   padding: 8px;
-  background-color: #FFF;
+  background-color: #fff;
   transform: rotate(45deg);
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: auto;
-    width: 5px;
-    height: 5px;
-    bottom: 8px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 5px;
+  height: 5px;
+  bottom: 8px;
 }
