--- a/src/pages/Content/styles/app.css
+++ b/src/pages/Content/styles/app.css
@@ -684,7 +684,7 @@ body {
     transform: translateX(0);
   }
 }
-[data-radix-popper-content-wrapper] {
+#screenity-ui [data-radix-popper-content-wrapper] {
   z-index: 99999999999 !important;
 }
 
@@ -3160,7 +3160,7 @@ button {
     transform: translateX(0);
   }
 }
-[data-radix-popper-content-wrapper] {
+#screenity-ui [data-radix-popper-content-wrapper] {
   z-index: 99999999999 !important;
 }
 
