--- a/src/pages/Content/popup/styles/components/_MainButton.scss
+++ b/src/pages/Content/popup/styles/components/_MainButton.scss
@@ -52,7 +52,7 @@
 .recording-button {
 	margin-top: $spacing-03;
 	filter: $gradient-shadow-primary;
-	background:radial-gradient(127.41% 127.78% at 35.44% 0%, #2BAEF8 23.13%, #3582F6 46.35%, #486DEF 74.48%, #7B9AEA 100%);
+	background:radial-gradient(127.41% 127.78% at 35.44% 0%, #FBAB7E 23.13%, #ff9800 46.35%, #ffc107 74.48%, #ff9800 100%);
 	animation: 0;
 	animation: background-size 6s ease-in-out infinite;
 	animation-play-state: paused;
