--- a/src/pages/Content/styles/app.css
+++ b/src/pages/Content/styles/app.css
@@ -2814,7 +2814,7 @@ button {
 .recording-button {
   margin-top: 8px;
   filter: drop-shadow(0px 4px 20px rgba(86, 123, 218, 0.5));
-  background: radial-gradient(127.41% 127.78% at 35.44% 0%, #2BAEF8 23.13%, #3582F6 46.35%, #486DEF 74.48%, #7B9AEA 100%);
+  background: radial-gradient(127.41% 127.78% at 35.44% 0%, #ff9800 23.13%, #ff9800 46.35%, #ff9800 74.48%, #ff9800 100%);
   animation: 0;
   animation: background-size 6s ease-in-out infinite;
   animation-play-state: paused;
